--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </div>
     </center>
     <center>
-    <h1 class="h1">Khushbu Mahadule</h1>
+    <h1 class="h1">Khushbu Mahadule</h1><br>
     <h3 class="h3">Hello,Glad To See You Here!</h3><br>
 </center>
     <p class="p">
         I am Khushbu Mahadule,basically,I belong to Ramtek City.But I am Currently Living in Nagpur.
         About my studies,Currently Pursuing my degree from kdk college of engineering nagpur.
-        My strength is I'am self-motivated and a hard worker.My technical skills  are C,c++,html,css,bootstrap,javascript and basic python.</p><br>
+        My strength is I'am self-motivated and hard worker.My technical skills  are C,c++,html,css,bootstrap,javascript and basic python.</p><br>
      <h4 class="h4">Thank You for Visiting!</h4><br>
      <p class="p2">Ping me at <a href="mailto: khushbumahadule8@gmail.com"style="text-decoration: none;">khushbumahadule8@gmail.com</a></p><br>
      <hr class="line">
